Updated for 1.21.4
Deprecated Pair (Alternatives exist in other libraries)
Deprecated UUID CODEC (One in neoforge now)
Massive Cleanup
Javadoc Improvements
Removed `DatTeleport` (Teleporting has changed)