@@ -2,11 +2,9 @@ package com.datdeveloper.datmoddingapi.concurrentTask;
 
 import com.datdeveloper.datmoddingapi.DatConfig;
 import com.datdeveloper.datmoddingapi.Datmoddingapi;
-import com.mojang.logging.LogUtils;
-import net.minecraftforge.event.TickEvent;
-import net.minecraftforge.eventbus.api.SubscribeEvent;
-import net.minecraftforge.fml.common.Mod;
-import org.slf4j.Logger;
+import net.neoforged.bus.api.SubscribeEvent;
+import net.neoforged.fml.common.EventBusSubscriber;
+import net.neoforged.neoforge.event.tick.ServerTickEvent;
 
 import java.util.Queue;
 import java.util.concurrent.*;
@@ -14,15 +12,16 @@ import java.util.concurrent.*;
 /**
  * A system for running tasks concurrently in another thread, optionally with a delay
  * <p>Concurrent Tasks <b>do</b> execute in another thread, and therefore can lead to problems with thread unsafety</p>
- * <p>For executing tasks with a delay but on the server thread (with everything else, nice and thread safely), use {@link com.datdeveloper.datmoddingapi.delayedEvents.DelayedEventsHandler}</p>
+ * <p>For executing tasks with a delay but on the server thread (with everything else, nice and thread safely), use
+ * {@link com.datdeveloper.datmoddingapi.delayedEvents.DelayedEventsHandler}</p>
  *
  * @see Callable
  * @see Runnable
  */
-@Mod.EventBusSubscriber(modid = Datmoddingapi.MODID, bus = Mod.EventBusSubscriber.Bus.FORGE)
+@EventBusSubscriber(modid = Datmoddingapi.MODID)
 public class ConcurrentHandler {
-    private static final Logger LOGGER = LogUtils.getLogger();
-    private static final String NOT_READY_WARNING = "Something attempted to schedule a task before the ConcurrentHandler was ready, ignoring";
+    private static final String NOT_READY_WARNING = "Something attempted to schedule a task before the"
+            + " ConcurrentHandler was ready, ignoring";
 
     // Threading stuff
     ScheduledThreadPoolExecutor service;
@@ -36,7 +35,9 @@ public class ConcurrentHandler {
      * Set up the Concurrent handler, expects the config to be loaded
      */
     public static void initialise() {
-        INSTANCE.service = (ScheduledThreadPoolExecutor) Executors.newScheduledThreadPool(Math.min(5, Math.max(DatConfig.getMaxConcurrentThreadCount() / 4, 1)));
+        INSTANCE.service = (ScheduledThreadPoolExecutor) Executors.newScheduledThreadPool(
+                Math.clamp(DatConfig.getMaxConcurrentThreadCount() / 4, 1, 5)
+        );
         INSTANCE.service.setKeepAliveTime(5, TimeUnit.MINUTES);
         INSTANCE.service.setMaximumPoolSize(DatConfig.getMaxConcurrentThreadCount());
 
@@ -44,12 +45,13 @@ public class ConcurrentHandler {
     }
 
     /**
-     * A Server tick event used to handle any Runnables that have been passed from a Concurrent thread to be
-     * executed on the main thread
+     * A Server tick event used to handle any Runnables that have been passed from a Concurrent thread to be executed on
+     * the main thread
+     *
      * @param event The tick event
      */
     @SubscribeEvent
-    public static void onTick(final TickEvent.ServerTickEvent event) {
+    public static void onTick(final ServerTickEvent.Post event) {
         // Poll The mainThread queue and execute any tasks that have been queued
         for (int dummy = 0; dummy < DatConfig.getDelayedEventsPerTick() && !MAIN_THREAD_QUEUE.isEmpty(); ++dummy) {
             MAIN_THREAD_QUEUE.poll().run();
@@ -58,11 +60,12 @@ public class ConcurrentHandler {
 
     /**
      * Queue a runnable to be executed on the server thread.
-     * <br>
+     * <P>
      * This can be used from a Concurrent Task to execute some code, like the result of a calculation, back on the main
      * thread.
-     * <br>
+     * <P>
      * Note this is <b>Non-Blocking</b>
+     *
      * @param task The task to run on the main thread
      */
     public static void runOnMainThread(final Runnable task) {
@@ -71,14 +74,14 @@ public class ConcurrentHandler {
 
     /**
      * Queue a concurrent task with a return value
+     *
      * @param task The task to queue
-     * @param <T> The return type of the task
+     * @param <T>  The return type of the task
      * @return A Future representing the task
      */
     public static <T> Future<T> callConcurrentTask(final Callable<T> task) {
         if (!ConcurrentHandler.INSTANCE.initialised) {
-            LOGGER.warn(NOT_READY_WARNING);
-            return null;
+            throw new IllegalStateException(NOT_READY_WARNING);
         }
 
         return ConcurrentHandler.INSTANCE.service.submit(task);
@@ -86,12 +89,12 @@ public class ConcurrentHandler {
 
     /**
      * Queue an concurrent task
+     *
      * @param task The task to queue
      */
     public static void runConcurrentTask(final Runnable task) {
         if (!ConcurrentHandler.INSTANCE.initialised) {
-            LOGGER.warn(NOT_READY_WARNING);
-            return;
+            throw new IllegalStateException(NOT_READY_WARNING);
         }
 
         ConcurrentHandler.INSTANCE.service.submit(task);
@@ -99,16 +102,18 @@ public class ConcurrentHandler {
 
     /**
      * Schedule a task with a return value to run after the given delay
+     *
      * @param delay The delay before running the task
-     * @param unit The units of the delay
-     * @param task The task to queue
-     * @param <T> The return type of the task
+     * @param unit  The units of the delay
+     * @param task  The task to queue
+     * @param <T>   The return type of the task
      * @return A ScheduledFuture representing the task
      */
-    public static <T> ScheduledFuture<T> scheduleConcurrentTask(final long delay, final TimeUnit unit, final Callable<T> task) {
+    public static <T> ScheduledFuture<T> scheduleConcurrentTask(final long delay,
+                                                                final TimeUnit unit,
+                                                                final Callable<T> task) {
         if (!ConcurrentHandler.INSTANCE.initialised) {
-            LOGGER.warn(NOT_READY_WARNING);
-            return null;
+            throw new IllegalStateException(NOT_READY_WARNING);
         }
 
         return ConcurrentHandler.INSTANCE.service.schedule(task, delay, unit);
@@ -116,15 +121,17 @@ public class ConcurrentHandler {
 
     /**
      * Schedule a concurrent task
+     *
      * @param delay The delay before running the task
-     * @param unit The units of the delay
-     * @param task The task to queue
+     * @param unit  The units of the delay
+     * @param task  The task to queue
      * @return A ScheduledFuture representing the task
      */
-    public static ScheduledFuture<?> scheduleConcurrentTask(final long delay, final TimeUnit unit, final Runnable task) {
+    public static ScheduledFuture<?> scheduleConcurrentTask(final long delay,
+                                                            final TimeUnit unit,
+                                                            final Runnable task) {
         if (!ConcurrentHandler.INSTANCE.initialised) {
-            LOGGER.warn(NOT_READY_WARNING);
-            return null;
+            throw new IllegalStateException(NOT_READY_WARNING);
         }
 
         return ConcurrentHandler.INSTANCE.service.schedule(task, delay, unit);
@@ -132,16 +139,19 @@ public class ConcurrentHandler {
 
     /**
      * Schedule a task to run repeatedly with a fixed period after an initial delay
+     *
      * @param initialDelay The delay before starting the task
-     * @param period the period between repeat executions
-     * @param unit the units of the period and delay
-     * @param task the task to queue
+     * @param period       the period between repeat executions
+     * @param unit         the units of the period and delay
+     * @param task         the task to queue
      * @return A scheduledFuture representing the task (This is used to stop the event, do not lose it)
      */
-    public static ScheduledFuture<?> scheduleFixedRateConcurrentTask(final long initialDelay, final long period, final TimeUnit unit, final Runnable task) {
+    public static ScheduledFuture<?> scheduleFixedRateConcurrentTask(final long initialDelay,
+                                                                     final long period,
+                                                                     final TimeUnit unit,
+                                                                     final Runnable task) {
         if (!ConcurrentHandler.INSTANCE.initialised) {
-            LOGGER.warn(NOT_READY_WARNING);
-            return null;
+            throw new IllegalStateException(NOT_READY_WARNING);
         }
 
         return ConcurrentHandler.INSTANCE.service.scheduleAtFixedRate(task, initialDelay, period, unit);
